--- a/D++/CMakeLists.txt
+++ b/D++/CMakeLists.txt
@@ -35,4 +35,5 @@ endforeach()
 add_executable(${PROJECT_N} ${SRCS})
 
 target_include_directories(${PROJECT_N} PUBLIC include)
-target_link_libraries(D++ winmm)
+# CFLAGS (-I"E:\\sfml\\SFML-2.5.1\\include")
+# LIBS ( -L"E:\\sfml\\SFML-2.5.1\\lib" -lsfml-graphics -lsfml-window -lsfml-system)
